testdata/snapshots/hgrep__tests__arg_matches__all_printer_opts_before_args.snap
---
source: src/main.rs
expression: raw
---
[
    (
        "PATH",
        [
            "dir1",
            "dir2",
        ],
    ),
    (
        "PATTERN",
        [
            "some pattern",
        ],
    ),
    (
        "ascii-lines",
        [
            "true",
        ],
    ),
    (
        "background",
        [
            "true",
        ],
    ),
    (
        "crlf",
        [
            "false",
        ],
    ),
    (
        "custom-assets",
        [
            "true",
        ],
    ),
    (
        "first-only",
        [
            "true",
        ],
    ),
    (
        "fixed-strings",
        [
            "false",
        ],
    ),
    (
        "follow-symlink",
        [
            "false",
        ],
    ),
    (
        "generate-man-page",
        [
            "false",
        ],
    ),
    (
        "glob-case-insensitive",
        [
            "false",
        ],
    ),
    (
        "grid",
        [
            "true",
        ],
    ),
    (
        "hidden",
        [
            "false",
        ],
    ),
    (
        "ignore-case",
        [
            "false",
        ],
    ),
    (
        "invert-match",
        [
            "false",
        ],
    ),
    (
        "line-regexp",
        [
            "false",
        ],
    ),
    (
        "list-themes",
        [
            "true",
        ],
    ),
    (
        "max-context",
        [
            "10",
        ],
    ),
    (
        "min-context",
        [
            "5",
        ],
    ),
    (
        "mmap",
        [
            "false",
        ],
    ),
    (
        "multiline",
        [
            "false",
        ],
    ),
    (
        "multiline-dotall",
        [
            "false",
        ],
    ),
    (
        "no-grid",
        [
            "true",
        ],
    ),
    (
        "no-ignore",
        [
            "false",
        ],
    ),
    (
        "no-unicode",
        [
            "false",
        ],
    ),
    (
        "one-file-system",
        [
            "false",
        ],
    ),
    (
        "pcre2",
        [
            "false",
        ],
    ),
    (
        "printer",
        [
            "syntect",
        ],
    ),
    (
        "smart-case",
        [
            "false",
        ],
    ),
    (
        "tab",
        [
            "2",
        ],
    ),
    (
        "term-width",
        [
            "120",
        ],
    ),
    (
        "theme",
        [
            "Nord",
        ],
    ),
    (
        "type-list",
        [
            "false",
        ],
    ),
    (
        "unrestricted",
        [
            "0",
        ],
    ),
    (
        "word-regexp",
        [
            "false",
        ],
    ),
    (
        "wrap",
        [
            "never",
        ],
    ),
]
