testdata/snapshots/hgrep__tests__arg_matches__bat_doesnt_support_ascii_lines.snap
---
source: src/main.rs
expression: msg
---
"--ascii-lines flag is only available for syntect printer since bat does not support this feature"
