testdata/snapshots/hgrep__tests__arg_matches__bat_doesnt_support_background.snap
---
source: src/main.rs
expression: msg
---
"--background flag is only available for syntect printer since bat does not support painting background colors"
